--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -27,3 +27,80 @@ main>div {
     width: 95%;
   }
 }
+
+.header {
+  width: 100%;
+  height: 70px;
+  display: block;
+  background-color: #101010;
+
+}
+
+.footer {
+  width: 100%;
+  height: 70px;
+  display: block;
+  background-color: #101010;
+
+}
+
+.inner-footer{
+  width: 1000px;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+.logo_container {
+  height: 100%;
+  display: block;
+  float:left;
+
+}
+
+.footer-logo_container{
+  height: 100%;
+  display:table;
+  float: left;
+}
+
+.logo_container h1{
+  color: red;
+  height: 100%;
+  display: table-cell;
+  vertical-align: left;
+  font-family: 'Montserrat';
+  font-size: 36px;
+  font-weight: 200;
+}
+
+.logo_container h1 span{
+  font-weight: 800;
+}
+
+.navigation{
+  float: right;
+  height: 100%;
+
+}
+
+.navigation li{
+  height: 100%;
+  display: table;
+  float: left;
+  padding: 0px 20px;
+}
+
+.navigation li:last-child {
+  padding-right: 20px;
+}
+
+.navigation li a {
+  display: table-cell;
+  vertical-align: middle;
+  height: 100%;
+  color: red;
+  font-family: 'Montserrat';
+  font-size: 16px;
+
+}
