--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel=stylesheet>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 
 <body>
+
+  <div class="header">
+    <div class="inner_header">
+      <div class="logo_container">
+        <h1>Wish<span>List</span></h1>
+      </div>
+
+      <ul class="navigation">
+        <li><a href>Home</a></li>
+        <li><a href>Login</a></li>
+        <li><a href>Sign up!</a></li>
+      </ul>
+    </div>
+  </div>
+
+
   {{{body}}}
 </body>
 
