--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
 
 <body>
 
+  <!-- Header -->
   <div class="header">
     <div class="inner_header">
       <div class="logo_container">
@@ -30,6 +31,26 @@
 
 
   {{{body}}}
+
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="inner-footer">
+      <div class="logo_container">
+        <h1>Wish<span>List</span></h1>
+
+        <div class="container">
+          <i class="fab fa-facebook-square medium"></i>
+          <i class="fab fa-instagram medium"></i>
+          <i class="fab fa-twitter medium"></i>
+          <i class="fab fa-pinterest medium"></i>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://kit.fontawesome.com/fe613f4734.js"></script>
+
 </body>
 
 </html>
