Added new empty page for user's wishlist

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,8 +22,8 @@
       </div>
 
       <ul class="navigation">
-        <li><a href>Home</a></li>
-        <li><a href>Login</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/wishlist">Login</a></li>
         <li><a href>Sign up!</a></li>
       </ul>
     </div>
