added login page and style, connects to html routes

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,6 +10,9 @@
         <label for="lastName"><b>Last Name</b></label>
         <input type="text" placeholder="Enter lastName" name="lastName" required>
 
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+
         <label for="gender"><b>Gender</b></label>
         <input type="text" placeholder="Enter Gender" name="gender" required>
 
