--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel=stylesheet>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/styles.css">
-  <link href="/styles/signup.css" />
+  <link rel="stylesheet" href="/styles/signup.css">
+  <link rel="stylesheet" href="/styles/login.css">
 </head>
 
 
@@ -24,7 +25,7 @@
 
       <ul class="navigation">
         <li><a href="/">Home</a></li>
-        <li><a href="/wishlist">Login</a></li>
+        <li><a href="/login">Login</a></li>
         <li><a href="/signup">Sign up!</a></li>
       </ul>
     </div>
