--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,25 +5,25 @@
         <hr>
 
         <label for="firstName"><b>First Name</b></label>
-        <input type="text" placeholder="Enter firstName" name="firstName" required>
+        <input id="firstName" type="text" placeholder="Enter firstName" name="firstName" required>
 
         <label for="lastName"><b>Last Name</b></label>
-        <input type="text" placeholder="Enter lastName" name="lastName" required>
+        <input id="lastName" type="text" placeholder="Enter lastName" name="lastName" required>
 
         <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
+        <input id="uname" type="text" placeholder="Enter Username" name="uname" required>
 
         <label for="gender"><b>Gender</b></label>
-        <input type="text" placeholder="Enter Gender" name="gender" required>
+        <input id="gender" type="text" placeholder="Enter Gender" name="gender" required>
 
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
+        <label  for="email"><b>Email</b></label>
+        <input id="email" type="text" placeholder="Enter Email" name="email" required>
 
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input id="psw" type="password" placeholder="Enter Password" name="psw" required>
 
         <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        <input id="psw-repeat" type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
         <label>
             <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
@@ -33,7 +33,7 @@
 
         <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Sign Up</button>
+            <button id="signUpBtn" type="submit" class="signupbtn">Sign Up</button>
         </div>
     </div>
 </form>
