--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,13 +40,12 @@
     <div class="inner-footer">
       <div class="logo_container">
         <h1>Wish<span>List</span></h1>
-
-        <div class="container">
-          <i class="fab fa-facebook-square medium"></i>
-          <i class="fab fa-instagram medium"></i>
-          <i class="fab fa-twitter medium"></i>
-          <i class="fab fa-pinterest medium"></i>
-        </div>
+      </div>
+      <div class="social-media-icons">
+        <i class="fab fa-facebook-square medium"></i>
+        <i class="fab fa-instagram medium"></i>
+        <i class="fab fa-twitter medium"></i>
+        <i class="fab fa-pinterest medium"></i>
       </div>
     </div>
   </footer>
