working on data adding and saving

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="/styles/signup.css">
   <link rel="stylesheet" href="/styles/login.css">
+  <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
 
 
@@ -52,7 +55,15 @@
   </footer>
 
   <script src="https://kit.fontawesome.com/fe613f4734.js"></script>
-
+  <!-- JQuery Link -->
+      <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+       $(document).ready(function(){
+    $('.modal').modal();
+  });
+    </script>
 </body>
 
 </html>
