--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -1,6 +1,6 @@
 <main>
 
-    <div class="project">
+    {{!-- <div class="project">
         <img src="images/placeholder.jpg">
     </div>
 
@@ -34,5 +34,14 @@
 
     <div class="project">
         <img src="images/placeholder.jpg">
-    </div>
+    </div> --}}
+
+    <p>
+            <strong>ID</strong>: {{product.id}}</p>
+          <p>
+          <p>
+            <strong>Product Name</strong>: {{product.name}}</p>
+          <p>
+            <strong>Product Description:</strong> {{product.description}}</p>
+
 </main>
