--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,79 @@
 <main>
 
-  <div class="project">
+  {{!-- <div class="productImage">
     <img src="images/1.jpg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/2.jpg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/3.jpg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/4.jpg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/5.jpeg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/6.jpg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/7.jpg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/8.jpeg">
   </div>
 
-  <div class="project">
+  <div class="productImage">
     <img src="images/9.jpg">
+  </div> --}}
+
+{{!-- modal with form for user to input product information that they
+want to save --}}
+ <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+
+       <form class="clearfix mb-4" action="POST">
+          <div class="form-group">
+            <label for="product-name">Product Name</label>
+            <input type="text" id="product-name" class="form-control" aria-describedby="product-name" placeholder="Enter Product Name">
+          </div>
+          <div class="form-group">
+            <label for="product-description">Product Description</label>
+            <textarea class="form-control" id="product-description" aria-describedby="product-description" placeholder="Enter Product Description"></textarea>
+          </div>
+          <button id="submit" class="btn btn-primary float-right">Submit</button>
+        </form>
+    </div>
+
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat"></a>
+    </div>
   </div>
+
+ {{!-- list of saved products saved on the side --}}
+  <h3>List of Products:</h3>
+        <ul id="product-list" class="list-group">
+          {{#each products}}
+          <li data-id="{{this.id}}" class="list-group-item">
+            <a href="example/{{this.id}}">{{this.name}}</a>
+            <button class="btn btn-danger float-right delete">ｘ</button>
+          </li>
+          {{/each}}
+        </ul>
+
+
 </main>
