looking into data.map

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,38 @@
+.list-group-item {
+  background-color: aqua;
+}
+
+#modalTrigger {
+  position: fixed;
+ right: 10px;
+  top: 80px;
+}
+
+#listOfWishedProducts {
+  position: fixed;
+  right: -10px;
+  top: 100px;
+}
+
+#wishedLink {
+  position: relative;
+  right: -80px;
+}
+
+.delete {
+  width: 50px;
+  height: 30px;
+  margin: 10px;
+  position: relative;
+  right: -80px;
+}
+
 main img {
-  width: 100%;
+  width: 25%;
+}
+
+.productImage {
+  width: 50%;
 }
 
 main>div {
@@ -24,7 +57,7 @@ main>div {
   }
 
   main img {
-    width: 95%;
+    width: 25%;
   }
 }
 
