--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/login">Login</a></li>
         <li><a href="/signup">Sign up!</a></li>
+        <li><a href="/fulllist">Wishlist</a></li>
       </ul>
     </div>
   </div>
