--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,4 @@
-<form action="action_page.php" method="POST">
-    <div class="imgcontainer">
-        <img src="img_avatar2.png" alt="Avatar" class="avatar">
-    </div>
+<form action="/" method="POST">
 
     <div class="container">
         <label for="uname"><b>Username</b></label>
@@ -11,13 +8,6 @@
         <input type="password" placeholder="Enter Password" name="psw" required>
 
         <button id="loginBtn" type="submit">Login</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
     </div>
 
-    <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
-    </div>
 </form>
