--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,12 +10,13 @@
   <!-- fonts and icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel=stylesheet>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- stylesheets -->
   <!-- Compiled and minified CSS for materialize-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="/styles/styles.css">
-  <link rel="stylesheet" href="/styles/signup.css">
-  <link rel="stylesheet" href="/styles/login.css">
+  {{!-- <link rel="stylesheet" href="/styles/signup.css"> --}}
+  {{!-- <link rel="stylesheet" href="/styles/login.css"> --}}
 </head>
 
 <body>
