--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,69 @@
-<form action="/" style="border:1px solid #ccc" method="POST">
+<div id="form-container" class="container">
+
+    <div class="row">
+        <div class="col s12">
+            <h2>Sign Up</h2>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
+        </div>
+    </div>
+
+    <div class="row">
+        <form id="signUpForm" action="#" class="col s12" method="POST">
+
+            {{!--first name --}}
+            <div class="row">
+                <div class="col s12 input-field">
+                    <i class="material-icons prefix">account_circle</i>
+                    <label for="first_name">First Name</label>
+                    <input placeholder="first name" id="first_name" type="text" class="validate">
+                </div>
+            </div>
+            {{!-- last name --}}
+            <div class="row">
+                <div class="col s12 input-field">
+                    <i class="material-icons prefix">account_circle</i>
+                    <input placeholder="last name" id="last_name" type="text" class="validate">
+                    <label for="last_name">Last Name</label>
+                </div>
+            </div>
+            {{!-- email --}}
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">email</i>
+                    <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
+                </div>
+            </div>
+            {{!-- password --}}
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <input id="password" type="password" class="validate">
+                    <label for="password">Password</label>
+                </div>
+            </div>
+            {{!-- repeat password --}}
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <input id="repeatPassword" type="password" class="validate">
+                    <label for="repeatPassword">Repeat Password</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <button id="signUpBtn" class="btn waves-effect waves-light" type="submit" name="action">Sign Up!
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+</div>
+
+{{!-- <form action="#" method="POST">
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
@@ -29,4 +94,4 @@
             <button id="signUpBtn" type="submit" class="signupbtn">Sign Up</button>
         </div>
     </div>
-</form>
+</form> --}}
