updated login page with materialize components and styles

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col s12">
-            <h2>Sign Up</h2>
+            {{!-- <h2>Sign Up</h2> --}}
             <p>Please fill in this form to create an account.</p>
             <hr>
         </div>
@@ -51,8 +51,9 @@
                     <label for="repeatPassword">Repeat Password</label>
                 </div>
             </div>
+            {{!-- button --}}
             <div class="row">
-                <div class="col s12">
+                <div class="col s12 center-align">
                     <button id="signUpBtn" class="btn waves-effect waves-light" type="submit" name="action">Sign Up!
                         <i class="material-icons right">send</i>
                     </button>
