--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,37 @@
-<form action="/" method="POST">
+<div class="container">
+
+    <div class="row">
+        <form id="loginForm" class="col s12" method="POST" action="#">
+            {{!-- email --}}
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">email</i>
+                    <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
+                </div>
+            </div>
+            {{!-- password --}}
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <input id="password" type="password" class="validate">
+                    <label for="password">Password</label>
+                </div>
+            </div>
+            {{!-- button --}}
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button id="loginBtn" class="btn waves-effect waves-light red darken-4" type="submit"
+                        name="action">Log In
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+{{!-- <form action="/" method="POST">
 
     <div class="container">
         <label for="uname"><b>Username</b></label>
@@ -10,4 +43,4 @@
         <button id="loginBtn" type="submit">Login</button>
     </div>
 
-</form>
+</form> --}}
