added responsive grid for wishlist page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
   <!-- stylesheets -->
   <!-- Compiled and minified CSS for materialize-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="/styles/styles.css">
+  {{!-- <link rel="stylesheet" href="/styles/styles.css"> --}}
   {{!-- <link rel="stylesheet" href="/styles/signup.css"> --}}
   {{!-- <link rel="stylesheet" href="/styles/login.css"> --}}
 </head>
