--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -1,38 +1,169 @@
-<main>
+{{!-- container for wishlist --}}
+<main class="container">
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+    {{!-- row 1 --}}
+    <div class="row">
+        <div class="col s12 m6 l4 xl3">
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+        </div>
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+        <div class="col s12 m6 l4 xl3">
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+        </div>
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+        <div class="col s12 m6 l4 xl3">
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
 
-    <div class="project">
-        <img src="images/placeholder.jpg">
+        </div>
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
+    {{!-- // row 1 --}}
+    
+
 </main>
+{{!-- // container for wishlist --}}
+
+{{!-- <main>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+</main> --}}
