design improvements: got rid of site container, added bold to logo, added sticky footer, and updated .gitignore

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,20 +14,17 @@
   <!-- stylesheets -->
   <!-- Compiled and minified CSS for materialize-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  {{!-- <link rel="stylesheet" href="/styles/styles.css"> --}}
+  <link rel="stylesheet" href="/styles/styles.css">
   {{!-- <link rel="stylesheet" href="/styles/signup.css"> --}}
   {{!-- <link rel="stylesheet" href="/styles/login.css"> --}}
 </head>
 
 <body>
 
-  <!-- site container-->
-  <div class="container">
-
     <!-- navbar -->
     <nav class="black">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo red-text">WishList</a>
+        <a href="/" class="brand-logo red-text">wish<b>List</b></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
           <li><a href="/login">Login</a></li>
@@ -44,7 +41,7 @@
       <div class="container">
         <div class="row">
           <div class="col l4 s12">
-            <h5 class="red-text">Wish<span>List</span></h5>
+            <h5 class="red-text">wish<b>List</b></h5>
           </div>
           <div class="col l6 offset-l2 s12">
             <div class="social-media-icons">
@@ -58,9 +55,6 @@
       </div>
     </footer>
     <!-- // materialize footer -->
-
-  </div>
-  <!-- // site container-->
 
   <script src="https://kit.fontawesome.com/fe613f4734.js"></script>
   <!-- Compiled and minified JavaScript -->
