--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<div id="form-container" class="container">
+<main id="form-container" class="container">
 
     <div class="row">
         <div class="col s12">
@@ -62,7 +62,7 @@
         </form>
     </div>
 
-</div>
+</main>
 
 {{!-- <form action="#" method="POST">
     <div class="container">
