--- a/views/stores.handlebars
+++ b/views/stores.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container">
     <div class="row">
         <div class="col">
             <section id="stores">
@@ -44,4 +44,4 @@
             </section>
         </div>
     </div>
-</div>
+</main>
