--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,13 +1,14 @@
-/* body {
+body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-} */
+}
 
-/* main {
+main {
   flex: 1 0 auto;
-} */
+}
 
+/*
 main img {
   width: 100%;
 }
