--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,33 @@
+{{!-- <div class="row">
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/1.jpg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/2.jpg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/3.jpg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/4.jpg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/5.jpeg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/6.jpg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/7.jpg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/8.jpeg">
+  </div>
+  <div class="col s12 m6 l4 xl2">
+    <img class="responsive-img" src="images/9.jpg">
+  </div>
+</div> --}}
+
 <main>
 
   <div class="project">
