--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container">
 
     <div class="row">
         <form id="loginForm" class="col s12" method="POST" action="#">
@@ -29,7 +29,7 @@
             </div>
         </form>
     </div>
-</div>
+</main>
 
 {{!-- <form action="/" method="POST">
 
