--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,18 @@
-<main class="row">
+{{!-- <main class="row">
+  <div class="col s12 m6 l4 xl3">
+    <img class="responsive-img background-image" src="images/1.jpg">
+    <img class="responsive-img background-image" src="images/2.jpg">
+    <img class="responsive-img background-image" src="images/3.jpg">
+    <img class="responsive-img background-image" src="images/4.jpg">
+    <img class="responsive-img background-image" src="images/5.jpeg">
+    <img class="responsive-img background-image" src="images/6.jpg">
+    <img class="responsive-img" src="images/7.jpg">
+    <img class="responsive-img" src="images/8.jpeg">
+    <img class="responsive-img" src="images/9.jpg">
+  </div>
+</main> --}}
+
+ <main class="row">
   <div class="col s12 m6 l4 xl3">
     <img class="responsive-img" src="images/1.jpg">
   </div>
@@ -26,7 +40,7 @@
   <div class="col s12 m6 l4 xl3">
     <img class="responsive-img" src="images/9.jpg">
   </div>
-</main>
+</main> 
 
 {{!-- <main>
 
