--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,44 +21,50 @@
 
 <body>
 
-    <!-- navbar -->
-    <nav class="black">
-      <div class="nav-wrapper">
-        <a href="/" class="brand-logo red-text">wish<b>List</b></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/">Home</a></li>
-          <li><a href="/login">Login</a></li>
-          <li><a href="/signup">Sign up!</a></li>
-        </ul>
-      </div>
-    </nav>
-    <!-- // navbar -->
+  <!-- navbar -->
+  <nav class="black">
+    <div class="nav-wrapper">
+      <a href="/" class="brand-logo red-text">wish<b>List</b></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/">Home</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Sign up!</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- // navbar -->
 
-    {{{body}}}
+  <!-- main content -->
 
-    <!-- materialize footer -->
-    <footer class="page-footer black">
-      <div class="container">
-        <div class="row">
-          <div class="col l4 s12">
-            <h5 class="red-text">wish<b>List</b></h5>
-          </div>
-          <div class="col l6 offset-l2 s12">
-            <div class="social-media-icons">
-              <i class="fab fa-facebook-square medium"></i>
-              <i class="fab fa-instagram medium"></i>
-              <i class="fab fa-twitter medium"></i>
-              <i class="fab fa-pinterest medium"></i>
-            </div>
+  {{{body}}}
+
+  <!-- // main content -->
+
+  <!-- footer -->
+  <footer class="page-footer black">
+    <div class="container">
+      <div class="row">
+        <div class="col l4 s12">
+          <h5 class="red-text">wish<b>List</b></h5>
+        </div>
+        <div class="col l6 offset-l2 s12">
+          <div class="social-media-icons">
+            <i class="fab fa-facebook-square medium"></i>
+            <i class="fab fa-instagram medium"></i>
+            <i class="fab fa-twitter medium"></i>
+            <i class="fab fa-pinterest medium"></i>
           </div>
         </div>
       </div>
-    </footer>
-    <!-- // materialize footer -->
+    </div>
+  </footer>
+  <!-- // footer -->
 
+  <!-- scripts -->
   <script src="https://kit.fontawesome.com/fe613f4734.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!-- // scripts -->
 
 </body>
 
