--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -24,26 +24,26 @@
    
 
         <div class="project">
-        <img src="images/placeholder.jpg">
+        <img src="/images/placeholder.jpg">
 
     <div class="project">
-        <img src="images/placeholder.jpg">
+        <img src="/images/placeholder.jpg">
     </div>
 
     <div class="project">
-        <img src="images/placeholder.jpg">
+        <img src="/images/placeholder.jpg">
     </div>
 
     <div class="project">
-        <img src="images/placeholder.jpg">
+        <img src="/images/placeholder.jpg">
     </div>
 
     <div class="project">
-        <img src="images/placeholder.jpg">
+        <img src="/images/placeholder.jpg">
     </div>
 
     <div class="project">
-        <img src="images/placeholder.jpg">
+        <img src="/images/placeholder.jpg">
     </div>
 
     <div class="project">
