--- a/views/stores.handlebars
+++ b/views/stores.handlebars
@@ -1,47 +1,42 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <section id="stores">
-
-                <div class="card small">
-                    <div class="card-image">
-                        <img src="https://via.placeholder.com/150" alt="placeholder">
-                        <span class="card-title">Banana Republic</span>
-                        <a href="#" class="btn-floating halfway-fab waves-effect waves-light red"><i
-                                class="material-icons">add</i></a>
-                    </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient
-                            because I require little markup to use effectively.</p>
-                    </div>
+<main>
+    <div id="stores" class="row">
+        <div class="col s12 m6 l4 xl2">
+            <div class="card">
+                <div class="card-image">
+                    <img class="responsive-img" src="images/bananarepubliclogo.jpg" alt="banana republic">
+                    <span class="card-title">Banana Republic</span>
+                    <a href="#" class="btn-floating halfway-fab waves-effect waves-light red"><i
+                            class="material-icons">add</i></a>
                 </div>
-
-                <div class="card small">
-                    <div class="card-image">
-                        <img src="https://via.placeholder.com/150" alt="placeholder">
-                        <span class="card-title">J.Crew</span>
-                        <a href="#" class="btn-floating halfway-fab waves-effect waves-light red"><i
-                                class="material-icons">add</i></a>
-                    </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient
-                            because I require little markup to use effectively.</p>
-                    </div>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient
+                        because I require little markup to use effectively.</p>
                 </div>
-
-                <div class="card small">
-                    <div class="card-image">
-                        <img src="https://via.placeholder.com/150" alt="placeholder">
-                        <span class="card-title">COS</span>
-                        <a href="#" class="btn-floating halfway-fab waves-effect waves-light red"><i
-                                class="material-icons">add</i></a>
-                    </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient
-                            because I require little markup to use effectively.</p>
-                    </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="responsive-img" src="images/jcrewlogo.png" alt="j crew">
+                    <span class="card-title">J.Crew</span>
+                    <a href="#" class="btn-floating halfway-fab waves-effect waves-light red"><i
+                            class="material-icons">add</i></a>
                 </div>
-            </section>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient
+                        because I require little markup to use effectively.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="responsive-img" src="images/cos.png" alt="cos">
+                    <span class="card-title">COS</span>
+                    <a href="#" class="btn-floating halfway-fab waves-effect waves-light red"><i
+                            class="material-icons">add</i></a>
+                </div>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient
+                        because I require little markup to use effectively.</p>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</main>
