--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,45 @@
-<main>
+<main class="container">
 
-  <div class="project">
-    <img src="images/1.jpg">
+  {{!-- row 1 --}}
+  <div class="row">
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/1.jpg">
+    </div>
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/2.jpg">
+    </div>
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/3.jpg">
+    </div>
   </div>
+  {{!-- // row 1 --}}
 
-  <div class="project">
-    <img src="images/2.jpg">
+  {{!-- row 2 --}}
+  <div class="row">
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/4.jpg">
+    </div>
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/5.jpeg">
+    </div>
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/6.jpg">
+    </div>
   </div>
+  {{!-- // row 2 --}}
 
-  <div class="project">
-    <img src="images/3.jpg">
+  {{!-- row 3 --}}
+  <div class="row">
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/7.jpg">
+    </div>
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/8.jpeg">
+    </div>
+    <div class="col s12 m6 l4 xl3">
+      <img class="responsive-img" src="images/9.jpg">
+    </div>
   </div>
+  {{!-- // row 3 --}}
 
-  <div class="project">
-    <img src="images/4.jpg">
-  </div>
-
-  <div class="project">
-    <img src="images/5.jpeg">
-  </div>
-
-  <div class="project">
-    <img src="images/6.jpg">
-  </div>
-
-  <div class="project">
-    <img src="images/7.jpg">
-  </div>
-
-  <div class="project">
-    <img src="images/8.jpeg">
-  </div>
-
-  <div class="project">
-    <img src="images/9.jpg">
-  </div>
 </main>
