--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,32 @@
+.list-group-item {
+}
+
+#modalTrigger {
+  position: fixed;
+ right: 10px;
+  top: 80px;
+}
+
+#listOfWishedProducts {
+  position: fixed;
+  right: -10px;
+  top: 100px;
+}
+
+#wishedLink {
+  position: relative;
+  right: -80px;
+}
+
+.delete {
+  width: 50px;
+  height: 30px;
+  margin: 10px;
+  position: relative;
+  right: -80px;
+}
+
+
 body {
   display: flex;
   min-height: 100vh;
