multiple columns in database

--- a/views/fulllist.handlebars
+++ b/views/fulllist.handlebars
@@ -7,7 +7,19 @@
                 <p>ID: </p>
         </th>
         <th>
+           <p> STORE ID: </p>
+        </th>
+        <th>
             <p>NAME:</p>
+        </th>
+        <th>
+            <p>COLOR:</p>
+        </th>
+        <th>
+            <p>SIZE:</p>
+        </th>
+        <th>
+            <p>RATING:</p>
         </th>
         <th>
             <P>DESCRIPTION</P>
@@ -19,7 +31,19 @@
                 {{id}}
         </th>
         <th>
+            {{store_id}}
+        </th>
+        <th>
             {{name}}
+        </th>
+        <th>
+            {{color}}
+        </th>
+        <th>
+            {{size}}
+        </th>
+        <th>
+            {{rating}}
         </th>
         <th>
             {{description}}
@@ -33,29 +57,6 @@
         <img src="/images/placeholder.jpg">
         </div>
 
-    {{!-- <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>
-    <div class="project">
-        <img src="images/placeholder.jpg">
-    </div>  --}}
+   
 
 </main>
