--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,17 +50,50 @@ want to save --}}
       <h4>Add information for the products you wish for in the form below.</h4>
 
       <form class="clearfix mb-4" action="POST">
+
+        {{!-- STORE ID - DROP DOWN--}}
+         <div class="form-group">
+          <label for="store-id-number">Store ID Number</label>
+          <input type="text" id="store-id-number" class="form-control"
+            aria-describedby="store-id-number" placeholder="Enter The Store's Unique ID Number">
+        </div>
+
+{{!-- PRODUCT NAME - TEXT--}}
         <div class="form-group">
           <label for="product-wished-for-name">Product Name</label>
           <input type="text" id="product-wished-for-name" class="form-control"
             aria-describedby="product-wished-for-name" placeholder="Enter Name of Product Wished For">
         </div>
+
+        {{!-- PRODUCT DESCRIPTION - TEXT--}}
         <div class="form-group">
           <label for="product-wished-for-description">Product Description</label>
           <textarea class="form-control" id="product-wished-for-description"
             aria-describedby="product-wished-for-description"
             placeholder="Enter Description of Product Wished For"></textarea>
         </div>
+
+        {{!-- COLOR - TEXT --}}
+         <div class="form-group">
+          <label for="product-color">Color</label>
+          <input type="text" id="product-color" class="form-control"
+            aria-describedby="product-color" placeholder="Color">
+        </div>
+
+{{!-- SIZE - DROP DOWN --}}
+ <div class="form-group">
+          <label for="product-size">Size</label>
+          <input type="text" id="product-size" class="form-control"
+            aria-describedby="product-size" placeholder="Size">
+        </div>
+
+{{!-- RATING - DROP DOWN --}}
+        <div class="form-group">
+          <label for="product-rating">Rating</label>
+          <input type="text" id="product-rating" class="form-control"
+            aria-describedby="product-rating" placeholder="Rating">
+        </div>
+
         <button id="submit" class="btn btn-primary float-right">Submit</button>
       </form>
     </div>
