--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -11,9 +11,19 @@
           <h5 class="card-title">Wish List Product</h5>
            <p>
             <strong>ID</strong>: {{product.id}}</p>
-         
+         <p>
+             <strong>Store Id</strong>: {{product.store_id}}
+         </p>
+        
           <p>
             <strong>Product Name</strong>: {{product.name}}</p>
+             <p>
+             <strong>Color</strong>: {{product.color}}
+         </p>
+          <p>
+            <strong>Size</strong>: {{product.size}}</p>
+<p>
+            <strong>Rating</strong>: {{product.rating}}</p>
           <p>
             <strong>Product Description:</strong> {{product.description}}</p>
             <a href="/">← Back To Home</a>
