stores and products pages connected

--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -26,7 +26,7 @@
             <strong>Rating</strong>: {{product.rating}}</p>
           <p>
             <strong>Product Description:</strong> {{product.description}}</p>
-            <a href="/">← Back To Home</a>
+            <a href="/products">← Back To Products</a>
         </div>
       </div>
     </div>
