--- a/views/fulllist.handlebars
+++ b/views/fulllist.handlebars
@@ -57,6 +57,8 @@
         <img src="/images/placeholder.jpg">
         </div>
 
-   
+    <a href="/">← Back To Home</a><br>
+     <a href="/stores">← Back To Stores</a><br>
+      <a href="/products">← Back To Products</a>
 
 </main>
