--- a/views/fulllist.handlebars
+++ b/views/fulllist.handlebars
@@ -1,27 +1,27 @@
 <main>
-
+<div class="row">
     {{#each product}}
-
+<div class="col s12 m4 l3">
 
      <div class="card">
     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="/images/placeholder.jpg">
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Wish List Item {{id}}<i class="material-icons right">more_vert</i></span>
+      <span class="card-title activator grey-text text-darken-4">WishList Item {{id}}<i class="material-icons right">more_vert</i></span>
       {{!-- <p><a href="#">This is a link</a></p> --}}
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Wish List Item {{id}} <i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4">WishList Item {{id}} <i class="material-icons right">close</i></span>
       <p>STORE ID: {{store_id}} <br> NAME: {{name}} <br> COLOR: {{color}} <br> SIZE: {{size}} <br> RATING: {{rating}} <br> DESCRIPTION: {{description}}  </p>
     </div>
   </div>
     
-   
+   </div>
    
     {{/each}}
 
-
+</div>
 
         {{!-- <div class="project">
         <img src="/images/placeholder.jpg">
