--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,48 +39,6 @@
     <img src="images/9.jpg">
   </div>
 
-  {{!-- modal with form for user to input product information that they
-want to save --}}
-  <!-- Modal Trigger -->
-  <a id="modalTrigger" class="waves-effect waves-light btn modal-trigger" href="#modal1">Add To Wish List</a>
-
-  <!-- Modal Structure -->
-  <div id="modal1" class="modal">
-    <div class="modal-content center">
-      <h4>Add information for the products you wish for in the form below.</h4>
-
-      <form class="clearfix mb-4" action="POST">
-        <div class="form-group">
-          <label for="product-wished-for-name">Product Name</label>
-          <input type="text" id="product-wished-for-name" class="form-control"
-            aria-describedby="product-wished-for-name" placeholder="Enter Name of Product Wished For">
-        </div>
-        <div class="form-group">
-          <label for="product-wished-for-description">Product Description</label>
-          <textarea class="form-control" id="product-wished-for-description"
-            aria-describedby="product-wished-for-description"
-            placeholder="Enter Description of Product Wished For"></textarea>
-        </div>
-        <button id="submit" class="btn btn-primary float-right">Submit</button>
-      </form>
-    </div>
-
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat"></a>
-    </div>
-  </div>
-
-  {{!-- list of saved products saved on the side --}}
-  <div id="listOfWishedProducts">
-    <h3>Wish List:</h3>
-    <ul id="product-wished-for-list" class="list-group">
-      {{#each products}}
-      <li data-id="{{this.id}}" class="list-group-item">
-        <a id="wishedLink" href="wishlist/{{this.id}}">{{this.name}}</a>
-        <button id="deleteBtn" class="btn btn-danger delete">ｘ</button>
-      </li>
-      {{/each}}
-    </ul>
-  </div>
+  <a href="/stores">Go To Stores</a>
 
 </main>
