--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -1,38 +1,169 @@
 {{!-- container for wishlist --}}
 <main class="container">
 
-   
+    {{!-- row 1 --}}
+    <div class="row">
+        <div class="col s12 m6 l4 xl3">
 
-     <div class="container">
-  <div class="row">
-    <div class="col-8 offset-2">
-      <div class="card mt-4">
-        <div class="card-body">
-          <h5 class="card-title">Wish List Product</h5>
-           <p>
-            <strong>ID</strong>: {{product.id}}</p>
-         <p>
-             <strong>Store Id</strong>: {{product.store_id}}
-         </p>
-        
-          <p>
-            <strong>Product Name</strong>: {{product.name}}</p>
-             <p>
-             <strong>Color</strong>: {{product.color}}
-         </p>
-          <p>
-            <strong>Size</strong>: {{product.size}}</p>
-<p>
-            <strong>Rating</strong>: {{product.rating}}</p>
-          <p>
-            <strong>Product Description:</strong> {{product.description}}</p>
-            <a href="/products">← Back To Products</a>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
         </div>
-      </div>
+
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col s12 m6 l4 xl3">
+
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator responsive-img" src="images/placeholder.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
-  </div>
-</div>
-    
+    {{!-- // row 1 --}}
     
 
 </main>
+{{!-- // container for wishlist --}}
+
+{{!-- <main>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+
+    <div class="project">
+        <img src="images/placeholder.jpg">
+    </div>
+</main> --}}
