--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,47 +1,16 @@
-.card {
-  width: 200px;
-  height: 400px;
-  position: relative;
-  left: 10px;
-  margin: 10px;
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
-#modalTrigger {
-  position: fixed;
- right: 10px;
-  top: 80px;
+main {
+  flex: 1 0 auto;
 }
 
-#listOfWishedProducts {
-  position: fixed;
-  right: -10px;
-  top: 100px;
-}
-
-#wishedLink {
-  position: relative;
-  right: -80px;
-}
-
-.delete {
-  width: 50px;
-  height: 30px;
-  margin: 10px;
-  position: relative;
-  right: -80px;
-}
-
-img {
-  height: 200pcx;
-  width: 200px;
-}
-
-/* main img {
-  width: 25%;
-}
-
-.productImage {
-  width: 50%;
+/*
+main img {
+  width: 100%;
 }
 
 main>div {
@@ -66,7 +35,7 @@ main>div {
   }
 
   main img {
-    width: 25%;
+    width: 95%;
   }
 }
 
@@ -146,15 +115,4 @@ main>div {
   color: white;
   float: right;
   font-size: 36px;
-} */
-
-    
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-main {
-  flex: 1 0 auto;
 }
